--- a/CoronaVirusApi/style.css
+++ b/CoronaVirusApi/style.css
@@ -1,8 +1,9 @@
-H1 {
-    color: red;
-    text-align: center;
-    font: bold;
-}
-button{
-    background-color: aquamarine;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,100&display=swap');
+body{
+    height: 100vh;
+    font-family: "poppins", sans-serif;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    justify-content: center;
 }
