--- a/CoronaVirusApi/style.css
+++ b/CoronaVirusApi/style.css
@@ -1,9 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,100&display=swap');
 body{
     height: 100vh;
-    font-family: "poppins", sans-serif;
+    font-family: 'Poppins', sans-serif;
     display: flex;
     align-items: center;
     justify-items: center;
     justify-content: center;
+}
+body:after{
+    position: absolute;
+    content: "";
+    height: 50%;
+    width: 50%;
+    background: #f54703;
+    top: 0;
+}
+body:before{
+    position: absolute;
+    content: "";
+    height: 50%;
+    width: 50%;
+    background: #fff;
+    top: 0;
+}
+.container{
+    z-index: 1;
+    width: 70%;
+    margin: 0 auto;
+    border-radius: 24px;
+    background: #f6f5f0;
+    padding: 2%;
+    box-shadow: 0px 10px 6px -8px rgba(0, 0, 0, 0.75);
 }
