--- a/CoronaVirusApi/style.css
+++ b/CoronaVirusApi/style.css
@@ -32,3 +32,59 @@ body:before{
     padding: 2%;
     box-shadow: 0px 10px 6px -8px rgba(0, 0, 0, 0.75);
 }
+.board{
+    column-count: 3;
+    column-gap: 1rem;
+}
+.container h2{
+    margin: 0 0 30px;
+    text-align: center;
+}
+img#flag{
+    height: 20px;
+    width: 20px;
+}
+.card{
+    width: 84%;
+    background: #ccc;
+    padding: 8%;
+    margin-bottom: 20px;
+    border-radius: 6px;
+    color: #fff;
+}
+.card.a{
+    background: #41a7ff;
+}
+.card.cr{
+    background: #41a7ff;
+}
+.card.r{
+    background: #41a7ff;
+}
+.card.ca{
+    background: #41a7ff;
+}
+.card.d{
+    background: #41a7ff;
+}
+.card.t{
+    background: #41a7ff;
+}
+.car span{
+    font-size: 3rem;
+    font-weight: 700;
+    letter-spacing: 4px;
+}
+.card i{
+    font-size: 3rem;
+}
+@media screen and (max-width: 768px){
+    .board{
+        column-count: 2;
+    }
+}
+@media screen and (max-width: 500px){
+    .board{
+        column-count: 1;
+    }
+}
