--- a/CoronaVirusApi/style.css
+++ b/CoronaVirusApi/style.css
@@ -63,13 +63,13 @@ img#flag{
     background: #41a7ff;
 }
 .card.ca{
-    background: #41a7ff;
+    background: #525f6b;
 }
 .card.d{
-    background: #41a7ff;
+    background: #000000;
 }
 .card.t{
-    background: #41a7ff;
+    background: #8303eb;
 }
 .car span{
     font-size: 3rem;
