Variazione colori pagina delle statistiche

--- a/CoronaVirusApi/style.css
+++ b/CoronaVirusApi/style.css
@@ -12,7 +12,7 @@ body:after{
     content: "";
     height: 50%;
     width: 100%;
-    background: #eb5191;
+    background: #1f03b9;
     top: 0;
 }
 body:before{
@@ -20,7 +20,7 @@ body:before{
     content: "";
     height: 50%;
     width: 100%;
-    background: #fff;
+    background: rgb(192, 11, 123);
     bottom: 0;
 }
 .container{
